Fix env examples

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-BACKEND_API_KEY=api_key_here
-BACKEND_API_URL=backend_api_url_here
+BACKEND_API_KEY=backend-example-key
+BACKEND_API_URL=http://localhost:8000
